objects/Request_Remedy__c.object
<CustomObject>
    <fields>
        <fullName>EOF_Account_OLO__c</fullName>
        <label>EOF_Account_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore_WS__c</fullName>
        <label>EOF_Codice_Operatore_WS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>OF Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contract__c</fullName>
        <label>OF Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ID_Servizio__c</fullName>
        <label>OF ID Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_Processato_Errore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF Remedy Processato Errore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_Processato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF Remedy Processato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_actionDate__c</fullName>
        <label>OF Remedy actionDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_buildingNumber__c</fullName>
        <label>OF Remedy buildingNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_createdBy__c</fullName>
        <label>OF_Remedy createdBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerDivision__c</fullName>
        <label>OF Remedy customerDivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerId__c</fullName>
        <label>OF Remedy customerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerOrder__c</fullName>
        <label>OF Remedy customerOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_elementaryArea__c</fullName>
        <label>OF Remedy elementaryArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_faultCause__c</fullName>
        <label>OF Remedy faultCause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_faultResolution__c</fullName>
        <label>OF Remedy faultResolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_idBuilding__c</fullName>
        <label>OF Remedy idBuilding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_internalOrder__c</fullName>
        <label>OF Remedy internalOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_macroArea__c</fullName>
        <label>OF Remedy macroArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_networkIdResource__c</fullName>
        <label>OF Remedy networkIdResource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloCommCode__c</fullName>
        <label>OF Remedy oloCommCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessageCode__c</fullName>
        <label>OF Remedy oloMessageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessage__c</fullName>
        <label>OF Remedy oloMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_packageProvisioningCode__c</fullName>
        <label>OF Remedy packageProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_pop__c</fullName>
        <label>OF Remedy pop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_pricePlanProvisioningCode__c</fullName>
        <label>OF Remedy pricePlanProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_productProvisioningCode__c</fullName>
        <label>OF Remedy productProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_promoCode__c</fullName>
        <label>OF Remedy promoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_quantity__c</fullName>
        <label>OF Remedy quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_serialNumber__c</fullName>
        <label>OF Remedy serialNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_streetName__c</fullName>
        <label>OF Remedy streetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_toponymyUnit__c</fullName>
        <label>OF Remedy toponymyUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_town__c</fullName>
        <label>OF Remedy town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_ttNumber__c</fullName>
        <label>OF Remedy ttNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_verticalOperator__c</fullName>
        <label>OF Remedy verticalOperator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Service_Code__c</fullName>
        <label>OF Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Valida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Valida</label>
        <type>Checkbox</type>
    </fields>
    <label>Request Remedy</label>
    <nameField>
        <label>Request Remedy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests Remedy</pluralLabel>
    <recordTypes>
        <fullName>EOF_Request_Assurance_Remedy</fullName>
        <active>true</active>
        <label>EOF Request Assurance Remedy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EOF_Request_Attivazione_Remedy</fullName>
        <active>true</active>
        <label>EOF Request Attivazione Remedy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EOF_Request_CPE_Remedy</fullName>
        <active>true</active>
        <label>EOF Request CPE Remedy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EOF_Request_Cessazione_Remedy</fullName>
        <active>true</active>
        <label>EOF Request Cessazione Remedy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EOF_Request_Provisioning_Remedy</fullName>
        <active>true</active>
        <label>EOF Request Provisioning Remedy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>